--- a/QtTcpClientConsumer/mainwindow.ui
+++ b/QtTcpClientConsumer/mainwindow.ui
@@ -14,17 +14,63 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButtonGet">
+   <widget class="QPushButton" name="conectado">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>11</x>
       <y>60</y>
-      <width>101</width>
-      <height>29</height>
+      <width>91</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>getData</string>
+     <string>Connect</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="endIp">
+    <property name="geometry">
+     <rect>
+      <x>11</x>
+      <y>30</y>
+      <width>191</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="desconectado">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>60</y>
+      <width>91</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Disconnect</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>IP do Servidor</string>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="listaDeIPs">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>90</y>
+      <width>191</width>
+      <height>131</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -34,7 +80,7 @@
      <x>0</x>
      <y>0</y>
      <width>463</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
